# mobileSam_adapter

./: .gitignore  .gitmodules  config.yaml  losses.py  main.ipynb  main.py  notebook.ipynb  pyproject.toml  requirements.txt  train.py  train_cod_adapter.sh  train_cod_adapter_lora.sh  train_cod_lora.sh  train_shadow_adapter.sh  train_shadow_adapter_lora.sh  train_shadow_adapter_lora_test.sh  train_shadow_lora.sh  val_finetune_noprompt.py  validate.py
adapters/lora/: lora_module.py
adapters/mobilesam_adapter/: adapter_module.py  image_encoder_with_adapter.py  prompt_generator.py
configs/: cod_adapter.yaml  cod_adapter_lora.yaml  cod_lora.yaml  shadow_adapter.yaml  shadow_adapter_lora.yaml  shadow_adapter_lora_test.yaml  shadow_lora.yaml
models/: mobile_sam_adapter.py  mobile_sam_base.py  mobile_sam_lora.py
models/mobileSam/mobile_sam/modeling/: image_encoder.py  sam.py  tiny_vit_sam.py
