[project]
name = "adapting-mobilesam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.45.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mobile-sam",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
mobile-sam = { git = "https://github.com/dhkim2810/MobileSAM.git" }
